[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agm"
version = "0.1.0"
description = "Unified CLI for managing worktrees, project dependencies, configuration and tmux sessions"
requires-python = ">=3.12"
dependencies = [
    "plumbum>=1.9.0",
    "typer>=0.16.0",
]

[project.scripts]
agm = "agm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agm"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_expr = true
disallow_any_generics = true
disallow_any_decorated = true
disallow_subclassing_any = true
disallow_untyped_calls = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "ruff>=0.11",
]
